--- a/index.html
+++ b/index.html
@@ -2,14 +2,135 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Welcome to Pikulin.net</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pikulin Weather Station</title>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    body { font-family: sans-serif; text-align: center; padding-top: 50px; background: #f2f2f2; }
-    h1 { color: #333; }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f0f4f8;
+    }
+    nav {
+      display: flex;
+      justify-content: center;
+      background-color: #004d80;
+      padding: 1rem;
+    }
+    nav button {
+      background: #fff;
+      border: none;
+      padding: 0.5rem 1rem;
+      margin: 0 0.5rem;
+      cursor: pointer;
+      font-weight: bold;
+      border-radius: 5px;
+    }
+    nav button.active {
+      background: #ffd700;
+    }
+    section {
+      display: none;
+      padding: 2rem;
+    }
+    section.active {
+      display: block;
+    }
+    #live-icon {
+      font-size: 4rem;
+      margin: 1rem 0;
+    }
+    .error {
+      color: red;
+    }
   </style>
 </head>
 <body>
-  <h1>Welcome to Pikulin.net</h1>
-  <p>This is my humble home on the web. Weather info coming soon!</p>
+  <nav>
+    <button onclick="showTab('live')" class="active">Live</button>
+    <button onclick="showTab('trends')">Trends</button>
+    <button onclick="showTab('forecast')">Forecast</button>
+    <button onclick="showTab('archive')">Historical Archive</button>
+    <button onclick="showTab('webcam')">Webcam</button>
+  </nav>
+
+  <section id="live" class="active">
+    <h2>Live Weather</h2>
+    <div id="live-icon">⛅</div>
+    <div id="live-weather">Loading...</div>
+  </section>
+
+  <section id="trends">
+    <h2>Weather Trends (24h)</h2>
+    <canvas id="trendChart"></canvas>
+  </section>
+
+  <section id="forecast">
+    <h2>Forecast</h2>
+    <p>Coming soon!</p>
+  </section>
+
+  <section id="archive">
+    <h2>Historical Archive</h2>
+    <p>Coming soon: temperature, humidity, pressure, wind, rain, lightning</p>
+  </section>
+
+  <section id="webcam">
+    <h2>Webcam</h2>
+    <p>Webcam page coming soon!</p>
+  </section>
+
+  <script>
+    const token = 'a3808762-f028-4161-bf9d-085ed84725b8';
+    const stationId = 148425;
+
+    function showTab(tabId) {
+      document.querySelectorAll('section').forEach(sec => sec.classList.remove('active'));
+      document.querySelectorAll('nav button').forEach(btn => btn.classList.remove('active'));
+      document.getElementById(tabId).classList.add('active');
+      event.target.classList.add('active');
+    }
+
+    function getIconFromConditions(obs) {
+      if (obs.lightning_strike_count_last_3hr > 0) return '🌩️';
+      if (obs.precip > 0) return '🌧️';
+      if (obs.wind_avg > 6) return '🌬️';
+      if (obs.air_temperature < 0) return '❄️';
+      return '☀️';
+    }
+
+    function updateLiveWeather() {
+      fetch(`https://swd.weatherflow.com/swd/rest/observations/station/${stationId}?token=${token}`)
+        .then(res => res.json())
+        .then(data => {
+          if (data.stations && data.stations.length > 0) {
+            const obs = data.stations[0].last_ob;
+            const tempC = obs.air_temperature;
+            const tempF = (tempC * 9/5 + 32).toFixed(1);
+            const icon = getIconFromConditions(obs);
+
+            document.getElementById('live-icon').textContent = icon;
+            document.getElementById('live-weather').innerHTML = `
+              <strong>Temperature:</strong> ${tempC.toFixed(1)} °C / ${tempF} °F<br>
+              <strong>Humidity:</strong> ${obs.relative_humidity} %<br>
+              <strong>Pressure:</strong> ${obs.sea_level_pressure} mb<br>
+              <strong>Wind:</strong> ${obs.wind_avg} m/s<br>
+              <strong>Rain (Last 24h):</strong> ${obs.precip} mm<br>
+              <strong>Lightning:</strong> ${obs.lightning_strike_count_last_3hr} strikes (last 3 hrs)
+            `;
+          } else {
+            document.getElementById('live-weather').innerHTML = '<div class="error">No station data available.</div>';
+          }
+        })
+        .catch(err => {
+          console.error(err);
+          document.getElementById('live-weather').innerHTML = '<div class="error">Error loading weather data.</div>';
+        });
+    }
+
+    updateLiveWeather();
+    setInterval(updateLiveWeather, 15 * 60 * 1000); // refresh every 15 minutes
+  </script>
 </body>
 </html>
