--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
     .error {
       color: red;
     }
+    canvas {
+      max-width: 700px;
+      margin: 1rem auto;
+      display: block;
+      background: white;
+      padding: 1rem;
+      border-radius: 8px;
+    }
   </style>
 </head>
 <body>
@@ -62,7 +70,7 @@
   </section>
 
   <section id="trends">
-    <h2>Weather Trends (24h)</h2>
+    <h2>Weather Trends (Last 24h)</h2>
     <canvas id="trendChart"></canvas>
   </section>
 
@@ -93,6 +101,7 @@
     }
 
     function getIconFromConditions(obs) {
+      if (!obs) return '❓';
       if (obs.lightning_strike_count_last_3hr > 0) return '🌩️';
       if (obs.precip > 0) return '🌧️';
       if (obs.wind_avg > 6) return '🌬️';
@@ -104,8 +113,14 @@
       fetch(`https://swd.weatherflow.com/swd/rest/observations/station/${stationId}?token=${token}`)
         .then(res => res.json())
         .then(data => {
-          if (data.stations && data.stations.length > 0) {
-            const obs = data.stations[0].last_ob;
+          let obs = null;
+          if (data.stations && data.stations.length > 0 && data.stations[0].last_ob) {
+            obs = data.stations[0].last_ob;
+          } else if (data.obs && data.obs.length > 0) {
+            obs = data.obs[0];
+          }
+
+          if (obs) {
             const tempC = obs.air_temperature;
             const tempF = (tempC * 9/5 + 32).toFixed(1);
             const icon = getIconFromConditions(obs);
@@ -116,21 +131,69 @@
               <strong>Humidity:</strong> ${obs.relative_humidity} %<br>
               <strong>Pressure:</strong> ${obs.sea_level_pressure} mb<br>
               <strong>Wind:</strong> ${obs.wind_avg} m/s<br>
-              <strong>Rain (Last 24h):</strong> ${obs.precip} mm<br>
-              <strong>Lightning:</strong> ${obs.lightning_strike_count_last_3hr} strikes (last 3 hrs)
+              <strong>Rain (Last 24h):</strong> ${obs.precip || 0} mm<br>
+              <strong>Lightning:</strong> ${obs.lightning_strike_count_last_3hr || 0} strikes (last 3 hrs)
             `;
           } else {
-            document.getElementById('live-weather').innerHTML = '<div class="error">No station data available.</div>';
+            document.getElementById('live-weather').innerHTML =
+              '<div class="error">No station data available.</div>';
           }
         })
         .catch(err => {
           console.error(err);
-          document.getElementById('live-weather').innerHTML = '<div class="error">Error loading weather data.</div>';
+          document.getElementById('live-weather').innerHTML =
+            '<div class="error">Error loading weather data.</div>';
         });
     }
 
+    // Trends chart (Temperature 24h)
+    function loadTrends() {
+      fetch(`https://swd.weatherflow.com/swd/rest/observations/station/${stationId}?token=${token}`)
+        .then(res => res.json())
+        .then(data => {
+          if (data.obs && data.obs.length > 0) {
+            const times = [];
+            const temps = [];
+
+            data.obs.forEach(entry => {
+              const date = new Date(entry.time * 1000);
+              times.push(date.getHours() + ':00');
+              temps.push((entry.air_temperature * 9/5 + 32).toFixed(1));
+            });
+
+            const ctx = document.getElementById('trendChart').getContext('2d');
+            new Chart(ctx, {
+              type: 'line',
+              data: {
+                labels: times,
+                datasets: [{
+                  label: 'Temperature (°F)',
+                  data: temps,
+                  borderColor: '#3366cc',
+                  backgroundColor: 'rgba(51, 102, 204, 0.1)',
+                  fill: true,
+                  tension: 0.3
+                }]
+              },
+              options: {
+                responsive: true,
+                scales: {
+                  y: {
+                    beginAtZero: false
+                  }
+                }
+              }
+            });
+          } else {
+            console.warn('No obs array found in trends API');
+          }
+        })
+        .catch(err => console.error('Error loading trends:', err));
+    }
+
     updateLiveWeather();
-    setInterval(updateLiveWeather, 15 * 60 * 1000); // refresh every 15 minutes
+    loadTrends();
+    setInterval(updateLiveWeather, 15 * 60 * 1000);
   </script>
 </body>
 </html>
