--- a/index.html
+++ b/index.html
@@ -131,12 +131,14 @@
     function loadTrends(days = 1) {
       const now = Math.floor(Date.now() / 1000);
       const start = now - days * 24 * 60 * 60;
+
       fetch(`https://swd.weatherflow.com/swd/rest/observations/station/${stationId}?token=${token}&time_start=${start}&time_end=${now}`)
         .then(res => res.json())
         .then(data => {
-          if (data.obs && data.obs.length > 0) {
+          if (data.obs && data.obs.length > 1) {
             const times = [];
             const temps = [], humidities = [], pressures = [], winds = [], rains = [], lightning = [];
+
             data.obs.forEach(entry => {
               const ts = entry.timestamp || entry.time;
               const date = new Date(ts * 1000);
@@ -149,6 +151,7 @@
               rains.push(entry.precip || 0);
               lightning.push(entry.lightning_strike_count_last_3hr || 0);
             });
+
             if (trendChartInstance) trendChartInstance.destroy();
             trendChartInstance = new Chart(document.getElementById('trendChart'), {
               type: 'line',
@@ -162,8 +165,14 @@
                   { label: 'Lightning (3hr)', data: lightning, borderColor: '#f39c12', fill: false }
                 ]
               },
-              options: { plugins: { legend: { display: true } }, interaction: { mode: 'index' } }
+              options: {
+                responsive: true,
+                plugins: { legend: { display: true } },
+                interaction: { mode: 'index', intersect: false }
+              }
             });
+          } else {
+            document.getElementById('trendChart').outerHTML = "<p class='error'>No trend data available.</p>";
           }
         });
     }
@@ -171,12 +180,14 @@
     function loadArchive(days = 7) {
       const now = Math.floor(Date.now() / 1000);
       const start = now - days * 24 * 60 * 60;
+
       fetch(`https://swd.weatherflow.com/swd/rest/observations/station/${stationId}?token=${token}&time_start=${start}&time_end=${now}`)
         .then(res => res.json())
         .then(data => {
-          if (!data.obs) return;
+          if (!data.obs || data.obs.length < 2) return;
           const times = [];
           const temps = [], humidities = [], pressures = [], winds = [], rains = [], lightning = [];
+
           data.obs.forEach(entry => {
             const ts = entry.timestamp || entry.time;
             const date = new Date(ts * 1000);
@@ -193,10 +204,10 @@
           const cfg = (label, dataArr, color) => ({
             type: 'line',
             data: { labels: times, datasets: [{ label, data: dataArr, borderColor: color, fill: false }] },
-            options: { responsive: true, plugins: { legend: { display: true } } }
+            options: { responsive: true }
           });
 
-          if (archiveCharts.temp) Object.values(archiveCharts).forEach(c => c.destroy());
+          Object.values(archiveCharts).forEach(c => c.destroy && c.destroy());
           archiveCharts.temp = new Chart(document.getElementById('tempChart'), cfg('Temperature (°F)', temps, '#e74c3c'));
           archiveCharts.humidity = new Chart(document.getElementById('humidityChart'), cfg('Humidity (%)', humidities, '#3498db'));
           archiveCharts.pressure = new Chart(document.getElementById('pressureChart'), cfg('Pressure (mb)', pressures, '#2ecc71'));
